syntax = "proto3";

option java_multiple_files = true;
option java_package = "clientToPrimeStubs";

package clientToPrimeService; // package do proto

// serviço com operações sobre números
service ClientToPrimeService{
  rpc isPrime(stream Number) returns (stream Result);

}

message Number{
  int64 value = 1;
}

message Result {
  bool is_prime = 1;
  int64 number = 2;
}
